regression/fail/datatype-where-complex.1.sml
signature S =
   sig
      datatype t = T
   end where type t = int * int
